--- a/portal/src/main/resources/public/admin/orange/theme.css
+++ b/portal/src/main/resources/public/admin/orange/theme.css
@@ -2255,3 +2255,16 @@ article.flashmsg-edit .outlined {
 article.flashmsg-edit editor editor-toolbar {
   min-height: 70px;
 }
+div.flex-box-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+div.flex-box-container > div {
+  margin: 10px;
+  border: 1px solid #444;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+.horizontal-margin {
+  margin: 0px 10px;
+}
