--- a/directory/src/main/resources/view/mon-compte.html
+++ b/directory/src/main/resources/view/mon-compte.html
@@ -45,8 +45,20 @@
 				</h1>
 			</app-title>
 
+			<div class="row twelve tabs vertical-spacing-twice">
+				<header class="horizontal-spacing-twice selected"><i18n>panel.my.profile</i18n></header>
+				<header class="horizontal-spacing-twice"
+					ng-if="me.userId === account.id && account.email.length"
+					workflow="directory.externalNotifications">
+					<a href="/timeline/preferencesView"><i18n>panel.notifications.set</i18n></a>
+				</header>
+				<header class="horizontal-spacing-twice" workflow="directory.historyView">
+					<a href="/timeline/historyView"><i18n>panel.user.history</i18n></a>
+				</header>
+			</div>
 
-			<div class="cell my-notifications" ng-if="me.userId === account.id && account.email.length"
+
+			<!-- <div class="cell my-notifications" ng-if="me.userId === account.id && account.email.length"
 				workflow="directory.externalNotifications">
 				<div class="row">
 					<a class="button" tooltip="panel.notifications.desc" href="/timeline/preferencesView">
@@ -54,8 +66,8 @@
 						<i18n>panel.notifications.set</i18n>
 					</a>
 				</div>
-			</div>
-			<div class="cell my-notifications" ng-if="me.userId === account.id && !account.email"
+			</div> -->
+			<div class="my-notifications" ng-if="me.userId === account.id && !account.email"
 				workflow="directory.externalNotifications">
 				<div class="row">
 					<a tooltip="panel.notifications.desc" ng-disabled="true" class="button disabled">
