--- a/portal/src/main/resources/public/admin/css/modules.less
+++ b/portal/src/main/resources/public/admin/css/modules.less
@@ -2342,3 +2342,27 @@ article.flashmsg-edit {
         min-height: 70px;
     }
 }
+div.notification {
+	position: relative;
+
+	article {
+		height: auto;
+		padding: 15px;
+		box-shadow: 1px 2px 5px #aaa;
+	}
+
+	.avatar img {
+		border: 1px solid #444;
+	}
+
+	.content {
+		width: 75%;
+		float: left;
+	}
+
+	.notification-reports {
+		padding-top: 10px;
+		margin-top: 10px;
+		border-top: 1px solid @accent;
+	}
+}
