--- a/timeline/src/main/resources/public/template/notifications.html
+++ b/timeline/src/main/resources/public/template/notifications.html
@@ -32,6 +32,10 @@
 				<input type="checkbox" ng-model="type.selected" ng-change="type.apply()" />
 			</label>
 		</div>
+		<div class="drop-up-label">
+			<label><i18n>filters.close</i18n></label>
+			<i class="arrow"></i>
+		</div>
 	</div>
 
 </div>
@@ -57,11 +61,11 @@
 		</article>
 		<div class="notification-actions" ng-class="{'opened': notification.opened}" ng-if="showActions(notification)">
 			<div class="opener" ng-click="notification.opened = !notification.opened">
-				<span class="symbol">◀</span>
+				<i class="left-open"></i>
 			</div>
 			<div class="actions">
 				<div ng-repeat="(name, action) in actions" ng-show="!action.condition || action.condition(notification)" class="action [[ name ]]">
-					<i></i>
+					<i class="[[name]]"></i>
 					<a ng-click="action.action(notification)" ng-disabled="notification[action.doneProperty]">
 						[[ notification[action.doneProperty] ? lang.translate(action.doneLabel) : lang.translate(action.label) ]]
 					</a>
