--- a/admin/src/main/resources/view/admin.html
+++ b/admin/src/main/resources/view/admin.html
@@ -6,8 +6,8 @@
         <base href="/">
 
         <link rel="stylesheet" type="text/css" href="{{#static}}styles/admin.css{{/static}}">
+        <link rel="stylesheet" type="text/css" href="{{#static}}styles/font-awesome-4.7.0/css/font-awesome.min.css{{/static}}">
 
-        <script src="https://use.fontawesome.com/8c8e7468d1.js"></script>
 
         <script src="{{#static}}js/polyfills.js{{/static}}"></script>
         <script src="{{#static}}js/vendor.js{{/static}}"></script>
