--- a/admin/src/main/resources/public/styles/admin.css
+++ b/admin/src/main/resources/public/styles/admin.css
@@ -8,16 +8,30 @@ body {
   margin: 0;
   font-family: 'Oxygen', sans-serif; }
 
+a {
+  color: black;
+  text-decoration: none; }
+
+a:visited {
+  color: initial; }
+
+a:active {
+  color: initial; }
+
+a:hover {
+  color: initial; }
+
 h1 {
   margin: 0;
   padding: 1em 0; }
 
 button {
-  cursor: pointer;
   background: white;
   border: 1px solid black;
   transition: background 0.25s; }
-  button:hover {
+  button:not(:disabled) {
+    cursor: pointer; }
+  button:hover:not(:disabled) {
     background-color: #ff8352; }
 
 input[type="search"] {
@@ -41,21 +55,87 @@ input[type="search"] {
   input[type="search"]::-moz-placeholder {
     color: rgba(0, 0, 0, 0.4); }
 
-input[type="text"] {
+input[type="text"], input[type="tel"], input[type="email"], input[type="date"] {
   border: none;
   border-bottom: 1px solid black;
   outline: none;
-  transition: border-color 0.25s; }
-  input[type="text"]:focus {
+  transition: border-color 0.25s;
+  padding: 0; }
+  input[type="text"]:focus, input[type="tel"]:focus, input[type="email"]:focus, input[type="date"]:focus {
     border-color: #ff8352; }
+  input[type="text"].ng-invalid.ng-dirty, input[type="tel"].ng-invalid.ng-dirty, input[type="email"].ng-invalid.ng-dirty, input[type="date"].ng-invalid.ng-dirty {
+    border-color: crimson;
+    background-color: rgba(255, 0, 0, 0.1); }
+
+input:invalid {
+  box-shadow: none; }
+
+form-errors {
+  flex: none !important; }
+  form-errors > .form-errors {
+    margin-right: 10px; }
 
 ul {
   list-style: none;
   padding-left: 20px; }
 
 /* UX */
-.card, .side-layout .side-card, .side-layout .side-companion {
+.card, .card-layout > *, .side-layout .side-card, .side-layout .side-companion {
   box-shadow: 1px 1px 5px #AAA; }
+
+.card-layout {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 0.9em; }
+  .card-layout > * {
+    flex: 1 0 calc(50% - 40px);
+    min-width: 400px;
+    margin: 20px;
+    padding: 10px 20px 0px 20px;
+    box-sizing: border-box; }
+  .card-layout .card-header {
+    font-size: 1.5em;
+    line-height: 1.5em;
+    font-weight: bold; }
+    .card-layout .card-header i {
+      margin-right: 15px; }
+  .card-layout .card-body {
+    padding: 25px 50px; }
+    .card-layout .card-body button {
+      display: block;
+      padding: 10px 20px;
+      font-size: 1.1em;
+      width: 100%;
+      margin: 10px 0px;
+      border-bottom-left-radius: 20px;
+      border-top-right-radius: 20px;
+      border: 1px solid #AAA; }
+      .card-layout .card-body button i {
+        float: right;
+        font-size: 1.2em;
+        width: 1.2em;
+        color: #444; }
+      .card-layout .card-body button:hover {
+        color: #444;
+        background-color: #ff8352;
+        border-color: white; }
+        .card-layout .card-body button:hover i {
+          color: white; }
+    .card-layout .card-body .card-list ul {
+      padding: 0px; }
+      .card-layout .card-body .card-list ul li {
+        border-bottom: 1px solid #CCC;
+        transition: background 0.25s; }
+        .card-layout .card-body .card-list ul li a {
+          padding: 5px;
+          display: block; }
+        .card-layout .card-body .card-list ul li:hover {
+          background-color: #ff8352;
+          color: white; }
+          .card-layout .card-body .card-list ul li:hover a {
+            color: white; }
+    .card-layout .card-body .card-big-margin {
+      margin: 50px; }
 
 i.top-right {
   position: absolute;
@@ -110,6 +190,21 @@ i.opener {
     color: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 0px 1px #444; }
 
+.padded {
+  padding: 20px; }
+
+.relative {
+  position: relative; }
+
+a.old-console {
+  background-color: crimson;
+  color: white !important;
+  transition: all 0.25s; }
+  a.old-console:hover {
+    background-color: #ff8352; }
+  a.old-console i:hover {
+    color: black !important; }
+
 /** TOOLTIP **/
 body > div.tooltip {
   padding: 2px 10px;
@@ -127,11 +222,12 @@ body > div.tooltip.shown {
 ux-portal > header {
   position: fixed !important;
   z-index: 9;
-  background-color: #00c8ff;
+  background-color: #00c8f8;
   padding: 15px;
   box-sizing: border-box;
   height: 50px;
-  box-shadow: 0px 0px 2px black; }
+  box-shadow: 0px 0px 2px black;
+  padding-right: 0px; }
 
 ux-portal side-panel > div {
   left: -400px !important;
@@ -173,7 +269,7 @@ ux-portal div[section] div.portal-body {
 
 /* Side panel */
 side-panel > div {
-  background-color: #00c8ff; }
+  background-color: #00c8f8; }
 
 side-panel > div > item-tree > ul {
   padding-left: 0px; }
@@ -201,11 +297,13 @@ item-tree ul li.parent.unfolded > a > i.opener::after {
 
 /* spinners */
 div.spinner-wrapper {
+  z-index: 2;
   background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), transparent); }
   div.spinner-wrapper div.sk-cube {
     background-color: #ff8352; }
 
 spinner-cube.portal-spinner div.spinner-wrapper {
+  z-index: 100;
   top: 50px !important;
   height: calc(100% - 50px) !important; }
 
@@ -215,10 +313,20 @@ spinner-cube.component-spinner div.spinner-wrapper {
   top: 0px !important;
   left: 0px !important; }
 
+spinner-cube.button-spinner div.spinner-wrapper {
+  position: absolute;
+  background: rgba(235, 235, 235, 0.6);
+  top: 0px !important;
+  left: 0px !important; }
+  spinner-cube.button-spinner div.spinner-wrapper .spinner-cube {
+    width: 100%;
+    height: 100%;
+    opacity: 0.8; }
+
 /* Two panels - list & companion */
 .side-layout .side-companion .panel-header {
   font-size: 1.6em;
-  background: #00c8ff;
+  background: #00c8f8;
   padding: 10px 20px; }
   .side-layout .side-companion .panel-header > img, .side-layout .side-companion .panel-header > i {
     height: 2.3em;
@@ -240,19 +348,32 @@ spinner-cube.component-spinner div.spinner-wrapper {
   .side-layout .side-companion .panel-header > span {
     margin-left: 20px; }
 
-.side-layout .side-companion .padded {
-  padding: 20px; }
+/* Panel message */
+div.panel-message {
+  background-color: crimson;
+  padding: 5px 5em;
+  color: white;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white; }
 
 /* Panel sections */
 .panel-section-header {
-  background: #00c8ff;
+  background: #00c8f8;
   border-bottom: 3px solid #ff8352; }
+  .panel-section-header i.opener {
+    font-size: 1.3em; }
 
 /* Forms */
 .form-field {
   margin: 5px 0px; }
   .form-field > label:first-child {
     font-weight: bold; }
+
+.form-row {
+  display: flex; }
+  .form-row > * {
+    flex: 1;
+    margin: 10px; }
 
 /* User list */
 user-list .user-toolbar button.toolbar-right {
@@ -276,8 +397,8 @@ user-list li {
     color: white; }
 
 /* User detail */
-user-detail panel-section:first-child div.panel-section-header {
-  padding-top: 25px; }
+user-detail user-info-section div.panel-section-header {
+  padding-top: 25px !important; }
 
 /* MULTI-COMBO */
 multi-combo > button {
@@ -293,7 +414,7 @@ multi-combo > button {
     margin-left: 10px;
     transition: transform 0.25s, color 0.25s; }
   multi-combo > button:hover::after {
-    color: #ff5e1f; }
+    color: white; }
   multi-combo > button.opened::after {
     transform: rotate(180deg); }
 
@@ -317,7 +438,8 @@ multi-combo > div {
     border: none;
     border-bottom: 1px solid black;
     transition: border 0.25s ease-in-out;
-    outline: none; }
+    outline: none;
+    padding: 0px 5px; }
     multi-combo > div > div.filter input:focus {
       border-bottom: 1px solid #ff8352; }
   multi-combo > div > ul {
@@ -345,6 +467,7 @@ multi-combo > div {
     display: inline-block;
     font-size: 0.8em;
     margin-right: 10px;
+    margin-bottom: 5px;
     padding: 2px 10px;
     cursor: pointer;
     transition: all 0.25s; }
