--- a/admin/src/main/resources/public/styles/admin.scss
+++ b/admin/src/main/resources/public/styles/admin.scss
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen');
 
 /* Variables */
-$main: rgb(0, 200, 2248);
+$main: rgb(0, 200, 248);
 $main-light: rgb(99, 218, 247);
 $main-dark: darken($main, 10%);
 $accent: rgb(255, 131, 82);
 $accent-light: lighten($accent, 20%);
 $accent-dark: darken($accent, 10%);
 $nuance: rgba(255, 255, 255, 0.9);
+$contrast: crimson;
 
 /* Elements */
 body {
@@ -17,18 +18,26 @@ body {
     font-family: 'Oxygen', sans-serif;
 }
 
+a {
+    color: black;
+    text-decoration: none;
+}
+a:visited { color: initial; }
+a:active { color: initial; }
+a:hover { color: initial; }
+
 h1 {
     margin: 0;
     padding: 1em 0;
 }
 
 button {
-    cursor: pointer;
+    &:not(:disabled) { cursor: pointer; }
     background: white;
     border: 1px solid black;
     transition: background 0.25s;
 
-    &:hover{
+    &:hover:not(:disabled) {
         background-color: $accent;
     }
 }
@@ -54,13 +63,31 @@ input[type="search"] {
     &::-moz-placeholder { color:rgba(0,0,0,0.4); }
 }
 
-input[type="text"] {
+input[type="text"], input[type="tel"], input[type="email"], input[type="date"] {
     border: none;
     border-bottom: 1px solid black;
     outline: none;
     transition: border-color 0.25s;
+    padding: 0;
 
     &:focus { border-color: $accent; }
+
+    &.ng-invalid.ng-dirty {
+        border-color: $contrast;
+        background-color: rgba(255,0,0,0.1);
+    }
+}
+
+input:invalid {
+  box-shadow: none
+}
+
+form-errors {
+    flex: none !important;
+
+    > .form-errors {
+        margin-right: 10px;
+    }
 }
 
 ul {
@@ -72,6 +99,87 @@ ul {
 
 .card {
     box-shadow: 1px 1px 5px #AAA;
+}
+
+.card-layout {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 0.9em;
+
+    > * {
+        flex: 1 0 calc(50% - 40px);
+        min-width: 400px;
+
+        @extend .card;
+        margin: 20px;
+        padding: 10px 20px 0px 20px;
+        box-sizing: border-box;
+    }
+
+    .card-header {
+        font-size: 1.5em;
+        line-height: 1.5em;
+        font-weight: bold;
+
+        i {
+            margin-right: 15px;
+        }
+    }
+
+    .card-body {
+        padding: 25px 50px;
+
+        button {
+            display: block;
+            padding: 10px 20px;
+            font-size: 1.1em;
+            width: 100%;
+            margin: 10px 0px;
+            border-bottom-left-radius: 20px;
+            border-top-right-radius: 20px;
+            border: 1px solid #AAA;
+
+            i {
+                float: right;
+                font-size: 1.2em;
+                width: 1.2em;
+                color: #444;
+            }
+
+            &:hover {
+                color:#444;
+                background-color: $accent;
+                border-color: white;
+
+                i {
+                    color: white;
+                }
+            }
+        }
+
+        .card-list ul {
+            padding: 0px;
+            li {
+                border-bottom: 1px solid #CCC;
+                transition: background 0.25s;
+
+                a {
+                    padding: 5px;
+                    display: block;
+                }
+
+                &:hover {
+                    background-color: $accent;
+                    color: white;
+                    a { color: white; }
+                }
+            }
+        }
+
+        .card-big-margin {
+            margin: 50px;
+        }
+    }
 }
 
 i.top-right {
@@ -150,6 +258,27 @@ i.opener {
     }
 }
 
+.padded {
+    padding: 20px;
+}
+
+.relative {
+    position: relative;
+}
+
+a.old-console {
+    background-color: crimson;
+    color: white !important;
+    transition: all 0.25s;
+
+    &:hover{
+        background-color: $accent;
+    }
+    i:hover {
+        color: black !important;
+    }
+}
+
 /** TOOLTIP **/
 
 body > div.tooltip {
@@ -176,6 +305,7 @@ ux-portal {
         box-sizing: border-box;
         height: 50px;
         box-shadow: 0px 0px 2px black;
+        padding-right: 0px;
     }
 
     side-panel {
@@ -281,6 +411,7 @@ item-tree {
 
 /* spinners */
 div.spinner-wrapper{
+    z-index: 2;
     background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), transparent);
 
     div.sk-cube {
@@ -290,6 +421,7 @@ div.spinner-wrapper{
 
 spinner-cube.portal-spinner {
     div.spinner-wrapper {
+        z-index: 100;
         top: 50px !important;
         height: calc(100% - 50px) !important;
     }
@@ -301,6 +433,21 @@ spinner-cube.component-spinner {
         background: rgba(235,235,235,0.6);
         top: 0px !important;
         left: 0px !important;
+    }
+}
+
+spinner-cube.button-spinner {
+    div.spinner-wrapper {
+        position: absolute;
+        background: rgba(235,235,235,0.6);
+        top: 0px !important;
+        left: 0px !important;
+
+        .spinner-cube {
+            width: 100%;
+            height: 100%;
+            opacity: 0.8;
+        }
     }
 }
 
@@ -344,11 +491,16 @@ spinner-cube.component-spinner {
                 margin-left: 20px;
             }
         }
-
-        .padded {
-            padding: 20px;
-        }
     }
+}
+
+/* Panel message */
+div.panel-message {
+    background-color: crimson;
+    padding: 5px 5em;
+    color: white;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
 }
 
 /* Panel sections */
@@ -356,6 +508,8 @@ spinner-cube.component-spinner {
 .panel-section-header {
     background: $main;
     border-bottom: 3px solid $accent;
+
+    i.opener{ font-size: 1.3em }
 }
 
 /* Forms */
@@ -363,6 +517,15 @@ spinner-cube.component-spinner {
     margin: 5px 0px;
     > label:first-child {
         font-weight: bold;
+    }
+}
+
+.form-row {
+    display: flex;
+
+    > * {
+        flex: 1;
+        margin: 10px;
     }
 }
 
@@ -408,8 +571,8 @@ user-list {
 
 /* User detail */
 user-detail {
-    panel-section:first-child div.panel-section-header {
-        padding-top: 25px;
+    user-info-section div.panel-section-header {
+        padding-top: 25px !important;
     }
 }
 /* MULTI-COMBO */
@@ -433,7 +596,7 @@ multi-combo {
         }
 
         &:hover::after {
-            color: $accent-dark;
+            color: white;
         }
 
         &.opened::after {
@@ -470,6 +633,7 @@ multi-combo {
                 border-bottom: 1px solid black;
                 transition: border 0.25s ease-in-out;
                 outline: none;
+                padding: 0px 5px;
 
                 &:focus {
                     border-bottom: 1px solid $accent;
@@ -514,6 +678,7 @@ multi-combo {
         display: inline-block;
         font-size: 0.8em;
         margin-right: 10px;
+        margin-bottom: 5px;
         padding: 2px 10px;
         cursor: pointer;
         transition: all 0.25s;
