--- a/admin/src/main/resources/public/templates/portal.component.html
+++ b/admin/src/main/resources/public/templates/portal.component.html
@@ -7,13 +7,20 @@
         <span>{{ currentStructure?.name }}</span>
     </div>
     <div header-right>
+        <a class="old-console" href="/directory/admin-console"
+            [tooltip]="'switch.old.admin.console.tooltip' | translate">
+            <i class="fa fa-step-backward"></i>
+        </a>
         <a href="/auth/logout">
             <i class="fa fa-sign-out" aria-hidden="true"></i>
         </a>
-         <i class="fa fa-user" aria-hidden="true"
+        <i class="fa fa-exclamation-triangle"></i>
+        <i class="fa fa-th"></i>
+        <i class="fa fa-users"></i>
+        <i class="fa fa-user" aria-hidden="true"
             *ngIf="currentStructure"
             [routerLink]="'/admin/' + currentStructure?.id + '/users'"
-            [class.active]="router.isActive('/admin/' + currentStructure?.id + '/users', true)"></i>
+            [class.active]="router.isActive('/admin/' + currentStructure?.id + '/users', false)"></i>
         <i class="fa fa-home" aria-hidden="true"
             *ngIf="currentStructure"
             [routerLink]="'/admin/' + currentStructure?.id"
@@ -30,7 +37,8 @@
                 display="name"
                 [flatten]="structureFilter && structureFilter.trim() ? ['children'] : []"
                 [filter]="{ name : structureFilter && structureFilter.trim() }"
-                (onSelect)="currentStructure = $event"></item-tree>
+                (onSelect)="currentStructure = $event"
+                [lastSelected]="currentStructure"></item-tree>
         </side-panel>
 
         <spinner-cube class="portal-spinner" waitingFor="portal-content"></spinner-cube>
