--- a/admin/src/main/resources/public/styles/admin.css
+++ b/admin/src/main/resources/public/styles/admin.css
@@ -80,47 +80,83 @@ ul {
   padding-left: 20px; }
 
 /* UX */
+.tabs {
+  text-align: center;
+  position: relative;
+  background: white;
+  left: -25px;
+  width: calc(100% + 50px);
+  box-shadow: 0px 0px 3px #444; }
+  .tabs > .tab {
+    display: inline-block;
+    padding: 1em 2em;
+    font-size: 1em;
+    background-color: white;
+    color: #888;
+    transition: all 0.25s;
+    border: none;
+    margin: 0px;
+    border-right: 1px solid #DDD;
+    outline: none; }
+    .tabs > .tab:first-child {
+      border-left: 1px solid #DDD; }
+    .tabs > .tab:hover {
+      background-color: #ffccb8;
+      color: #888; }
+    .tabs > .tab.active {
+      background-color: #ff8352;
+      color: white; }
+
 .card, .card-layout > *, .side-layout .side-card, .side-layout .side-companion {
   box-shadow: 1px 1px 5px #AAA; }
+
+button.leaf-button, .card-layout .card-body button {
+  padding: 10px 20px;
+  font-size: 1.1em;
+  border-bottom-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border: 1px solid #AAA; }
+  button.leaf-button i, .card-layout .card-body button i {
+    float: right;
+    font-size: 1.2em;
+    width: 1.2em;
+    color: #444; }
+  button.leaf-button:hover, .card-layout .card-body button:hover {
+    color: #444;
+    background-color: #ff8352;
+    border-color: white; }
+    button.leaf-button:hover i, .card-layout .card-body button:hover i {
+      color: white; }
 
 .card-layout {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   font-size: 0.9em; }
   .card-layout > * {
-    flex: 1 0 calc(50% - 40px);
+    flex: 0.5 0 calc(33% - 40px);
+    display: flex;
+    flex-wrap: wrap;
     min-width: 400px;
     margin: 20px;
     padding: 10px 20px 0px 20px;
     box-sizing: border-box; }
+    .card-layout > *.align-start {
+      align-content: flex-start; }
   .card-layout .card-header {
+    flex: 1 0 100%;
     font-size: 1.5em;
     line-height: 1.5em;
     font-weight: bold; }
     .card-layout .card-header i {
       margin-right: 15px; }
   .card-layout .card-body {
-    padding: 25px 50px; }
+    flex: 1;
+    padding: 25px 5%; }
     .card-layout .card-body button {
       display: block;
-      padding: 10px 20px;
-      font-size: 1.1em;
       width: 100%;
-      margin: 10px 0px;
-      border-bottom-left-radius: 20px;
-      border-top-right-radius: 20px;
-      border: 1px solid #AAA; }
-      .card-layout .card-body button i {
-        float: right;
-        font-size: 1.2em;
-        width: 1.2em;
-        color: #444; }
-      .card-layout .card-body button:hover {
-        color: #444;
-        background-color: #ff8352;
-        border-color: white; }
-        .card-layout .card-body button:hover i {
-          color: white; }
+      margin: 10px 0px; }
     .card-layout .card-body .card-list ul {
       padding: 0px; }
       .card-layout .card-body .card-list ul li {
@@ -204,6 +240,13 @@ a.old-console {
     background-color: #ff8352; }
   a.old-console i:hover {
     color: black !important; }
+
+.error-tech {
+  font-size: 0.7em;
+  font-style: italic;
+  border-left: 5px solid crimson;
+  margin: 5px 20px;
+  padding-left: 20px; }
 
 /** TOOLTIP **/
 body > div.tooltip {
@@ -291,6 +334,8 @@ item-tree ul li {
   item-tree ul li.selected > a {
     background-color: #ff8352;
     color: rgba(255, 255, 255, 0.9); }
+    item-tree ul li.selected > a:hover i {
+      color: black; }
 
 item-tree ul li.parent.unfolded > a > i.opener::after {
   transform: rotate(90deg); }
@@ -375,26 +420,21 @@ div.panel-message {
     flex: 1;
     margin: 10px; }
 
+/* Generic lists */
+list-component li:hover {
+  background-color: #ffccb8; }
+
+list-component li.selected {
+  background-color: #ff8352;
+  color: white; }
+
 /* User list */
-user-list .user-toolbar button.toolbar-right {
-  font-size: 1em;
-  border: none;
-  background: white;
+user-list .user-toolbar .toolbar-right {
+  font-size: 1.2em;
   float: right; }
-  user-list .user-toolbar button.toolbar-right i {
-    transition: color 0.25s; }
-  user-list .user-toolbar button.toolbar-right:hover i {
-    color: #ff8352; }
-  user-list .user-toolbar button.toolbar-right.selected i {
-    color: #ff5e1f; }
 
 user-list li {
   transition: background-color 0.25s, color 0.25s; }
-  user-list li:hover {
-    background-color: #ffccb8; }
-  user-list li.selected {
-    background-color: #ff8352;
-    color: white; }
 
 /* User detail */
 user-detail user-info-section div.panel-section-header {
