--- a/admin/src/main/resources/public/styles/admin.css
+++ b/admin/src/main/resources/public/styles/admin.css
@@ -33,6 +33,8 @@ button {
     cursor: pointer; }
   button:hover:not(:disabled) {
     background-color: #ff8352; }
+  button i {
+    margin: 0px 5px; }
 
 input[type="search"] {
   width: 100%;
@@ -78,6 +80,12 @@ form-errors {
 ul {
   list-style: none;
   padding-left: 20px; }
+  ul.actions-list li {
+    display: table-row; }
+    ul.actions-list li > * {
+      margin-left: 10px; }
+    ul.actions-list li > *:first-child {
+      display: table-cell; }
 
 /* UX */
 .tabs {
@@ -178,13 +186,17 @@ i.top-right {
   top: 1em;
   right: 1em; }
 
-i.action, user-list .user-toolbar > i {
+.action, user-list .user-toolbar > i, group-users-list list-component div.toolbar i {
   transition: color 0.25s;
   cursor: pointer; }
-  i.action:hover, user-list .user-toolbar > i:hover {
+  .action:hover, user-list .user-toolbar > i:hover, group-users-list list-component div.toolbar i:hover {
     color: #ff8352; }
-  i.action.selected, user-list .user-toolbar > i.selected {
+  .action.selected, user-list .user-toolbar > i.selected, group-users-list list-component div.toolbar i.selected {
     color: #ff5e1f; }
+
+i.disabled {
+  pointer-events: none;
+  color: #AAA !important; }
 
 i.opener {
   cursor: pointer;
@@ -245,8 +257,22 @@ a.old-console {
   font-size: 0.7em;
   font-style: italic;
   border-left: 5px solid crimson;
-  margin: 5px 20px;
+  margin: 15px 20px;
   padding-left: 20px; }
+
+/** Light boxes **/
+light-box div[content] {
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px white; }
+
+light-box.inner-list {
+  max-height: 95vh;
+  overflow-y: hidden; }
+  light-box.inner-list .padded {
+    padding-top: 0px; }
+  light-box.inner-list list-component ul {
+    max-height: 50vh;
+    overflow-y: scroll; }
 
 /** TOOLTIP **/
 body > div.tooltip {
@@ -408,6 +434,9 @@ div.panel-message {
   .panel-section-header i.opener {
     font-size: 1.3em; }
 
+.panel-section-content {
+  font-size: 0.9em; }
+
 /* Forms */
 .form-field {
   margin: 5px 0px; }
@@ -428,6 +457,10 @@ list-component li.selected {
   background-color: #ff8352;
   color: white; }
 
+list-component li.disabled {
+  color: #CCC; }
+
+/* Lists */
 /* User list */
 user-list .user-toolbar .toolbar-right {
   font-size: 1.2em;
@@ -435,6 +468,18 @@ user-list .user-toolbar .toolbar-right {
 
 user-list li {
   transition: background-color 0.25s, color 0.25s; }
+
+/* Group users list */
+group-users-list list-component div.toolbar {
+  border-bottom: 1px solid #ccc;
+  padding: 15px;
+  margin-bottom: 10px; }
+  group-users-list list-component div.toolbar .toolbar-right {
+    font-size: 1.2em;
+    float: right; }
+
+group-users-list list-component ul > li:first-child {
+  border-top: none !important; }
 
 /* User detail */
 user-detail user-info-section div.panel-section-header {
