--- a/admin/src/main/resources/public/templates/user-detail.component.html
+++ b/admin/src/main/resources/public/templates/user-detail.component.html
@@ -17,23 +17,15 @@
 
     <user-info-section [user]="user" [structure]="structure"></user-info-section>
     <user-administrative-section [user]="user" [structure]="structure"></user-administrative-section>
+    <user-relatives-section [user]="user" [structure]="structure"></user-relatives-section>
+    <user-children-section [user]="user" [structure]="structure"></user-children-section>
+    <user-structures-section [user]="user" [structure]="structure"></user-structures-section>
 
-    <panel-section section-title="users.details.section.relatives" [folded]="true">
+    <panel-section section-title="users.details.section.classes" [folded]="true">
+        <ul><li *ngFor="let c of user?.allClasses">{{ c.name }}</li></ul>
     </panel-section>
 
     <panel-section section-title="users.details.section.functions" [folded]="true">
-    </panel-section>
-
-    <panel-section section-title="users.details.section.structures" [folded]="true" *ngIf="user?.structures.length > 1">
-        <ul>
-            <li *ngFor="let s of user?.structures">
-                <a [routerLink]="['/admin', s.id]">{{ s.name }}</a>
-            </li>
-        </ul>
-    </panel-section>
-
-    <panel-section section-title="users.details.section.classes" [folded]="true" *ngIf="user?.allClasses.length > 0">
-        <ul><li *ngFor="let c of user?.allClasses">{{ c.name }}</li></ul>
     </panel-section>
 
     <panel-section section-title="users.details.section.learning.groups" [folded]="true">
