--- a/admin/src/main/resources/public/styles/admin.scss
+++ b/admin/src/main/resources/public/styles/admin.scss
@@ -99,15 +99,35 @@ ul {
     padding-left: 20px;
 
     &.actions-list {
+        display: table;
+        border-spacing: 10px 5px;
+        text-align: center;
+
         li {
             display: table-row;
-            > * { margin-left: 10px; }
-            > *:first-child { display:table-cell; }
+            > * { display: table-cell; }
+            > *:first-child { text-align: left; }
         }
     }
 }
 
 /* UX */
+
+.badge {
+    font-size: 0.8em;
+    padding: 1px 10px;
+    border-radius: 5px;
+
+    &.alert {
+        background-color: $contrast;
+        color: white;
+    }
+
+    &.info {
+        background-color: $main;
+        color: white;
+    }
+}
 
 .tabs {
     text-align: center;
@@ -332,7 +352,7 @@ i.opener {
 }
 
 a.old-console {
-    background-color: crimson;
+    background-color: $contrast;
     color: white !important;
     transition: all 0.25s;
 
@@ -347,7 +367,7 @@ a.old-console {
 .error-tech {
     font-size: 0.7em;
     font-style: italic;
-    border-left: 5px solid crimson;
+    border-left: 5px solid $contrast;
     margin: 15px 20px;
     padding-left: 20px;
 }
@@ -597,7 +617,7 @@ spinner-cube.button-spinner {
 
 /* Panel message */
 div.panel-message {
-    background-color: crimson;
+    background-color: $contrast;
     padding: 5px 5em;
     color: white;
     border-top: 1px solid white;
@@ -667,6 +687,20 @@ user-list {
 
     li {
         transition: background-color 0.25s, color 0.25s;
+        position: relative;
+
+        &.blocked::after {
+            content: "\f05e";
+            font-family: fontAwesome;
+            float: right;
+            font-size: 1.3em;
+        }
+        &.duplicates::after {
+            content: "\f0c0";
+            font-family: fontAwesome;
+            float: right;
+            font-size: 1.3em;
+        }
     }
 }
 
