--- a/admin/src/main/ts/components/users/user-detail/sections/info/user-info-section.component.html
+++ b/admin/src/main/ts/components/users/user-detail/sections/info/user-info-section.component.html
@@ -2,7 +2,7 @@
     <form-field label="profile">
         <span>{{ user.type | translate }}</span>
         <div>
-            <button (click)="wrapRequest(details.toggleBlock, 'user.block')" [disabled]="loadingService.isLoading('user.block', 1)" class="relative">
+            <button (click)="toggleUserBlock()" [disabled]="ls.isLoading('user.block', 1)" class="relative">
                     <spinner-cube class="button-spinner" waitingFor="user.block"></spinner-cube>
                     <i class="fa fa-ban"></i>
                     <s5l [s5l-params]="[details.blocked]">toggle.account</s5l>
@@ -31,15 +31,18 @@
         <span>{{ user.source }}</span>
     </form-field>
     <form-field label="administration" *ngIf="details.functions && details.functions[0] && details.functions[0][0]">
-        <span *ngFor="let function of details.functions">
+        <div *ngFor="let function of details.functions">
                 {{ function[0] | translate }}
-                <span *ngIf="function[1].length > 0">
+                <span *ngIf="function[1].length > 0 && getStructure(function[1][0])">
                     ({{ 'structure.or.more' | translate:{ head: getStructure(function[1][0]).name, rest: function[1].length - 1 } }})
                 </span>
-        </span>
+                <span *ngIf="function[1].length > 0 && !getStructure(function[1][0])">
+                    ({{ 'member.of.n.structures' | translate:{ count: function[1].length } }})
+                </span>
+        </div>
     </form-field>
     <div class="form-row" *ngIf="!user.code">
-        <button class="relative" (click)="wrapRequest(details.sendResetPassword, 'user.password.mail', null, passwordResetMail)" [disabled]="!passwordResetMail || passwordMailInput.errors">
+        <button class="relative" (click)="wrap(details.sendResetPassword, 'user.password.mail', null, passwordResetMail)" [disabled]="!passwordResetMail || passwordMailInput.errors">
                 <spinner-cube class="button-spinner" waitingFor="user.password.mail"></spinner-cube>
                 <s5l>send.reset.password</s5l>
                 <i class="fa fa-envelope"></i>
