--- a/admin/src/main/ts/components/users/user-detail/user-detail.component.html
+++ b/admin/src/main/ts/components/users/user-detail/user-detail.component.html
@@ -14,15 +14,24 @@
         <i class="fa fa-cog"></i>
         <s5l>adml.current.structure</s5l>
     </div>
+    <div class="panel-message" *ngIf="hasDuplicates()">
+        <i class="fa fa-users"></i>
+        <s5l>user.has.duplicates</s5l>
+        <button style="float: right" anchor="user-duplicates-section" (click)="openDuplicates()">
+            <i class="fa fa-compress"></i>
+            <s5l>manage.duplicates</s5l>
+        </button>
+    </div>
 
     <user-info-section [user]="user" [structure]="structure"></user-info-section>
     <user-administrative-section [user]="user" [structure]="structure"></user-administrative-section>
+    <user-duplicates-section [user]="user" [structure]="structure" [open]="forceDuplicates"></user-duplicates-section>
     <user-relatives-section [user]="user" [structure]="structure"></user-relatives-section>
     <user-children-section [user]="user" [structure]="structure"></user-children-section>
     <user-structures-section [user]="user" [structure]="structure"></user-structures-section>
 
     <panel-section section-title="users.details.section.classes" [folded]="true">
-        <ul><li *ngFor="let c of user?.allClasses">{{ c.name }}</li></ul>
+        <ul><li *ngFor="let c of user?.classes">{{ c.name }}</li></ul>
     </panel-section>
 
     <panel-section section-title="users.details.section.functions" [folded]="true">
