--- a/admin/src/main/ts/components/ux/list-component/list-component.html
+++ b/admin/src/main/ts/components/ux/list-component/list-component.html
@@ -7,7 +7,8 @@
         <li *ngFor="let item of model | filter: filters | filter: inputFilter | orderBy: sort | slice: 0:limit"
             (click)="onSelect.emit(item)"
             [class.selected]="isSelected(item)"
-            [class.disabled]="isDisabled(item)">
+            [class.disabled]="isDisabled(item)"
+            [ngClass]="ngClass(item)">
             {{ display(item) }}
         </li>
     </ul>
