--- a/admin/src/main/resources/public/styles/admin.scss
+++ b/admin/src/main/resources/public/styles/admin.scss
@@ -115,7 +115,7 @@ ul {
 
 .badge {
     font-size: 0.8em;
-    padding: 1px 10px;
+    padding: 0.2em 10px;
     border-radius: 5px;
 
     &.alert {
